--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-globe.gl": "^2.37.0",
+    "swiper": "^12.1.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
